# dotfiles

./: .alacritty.yml  .gitconfig  .gitignore  .gitignore_global  .gitmodules  .myclirc  .psqlrc  .scalafmt.conf  .sqruff  .tmux.conf  .vale.ini  .wezterm.lua  .zsh-fzf-custom-history  .zsh-fzf-dir-jump  .zsh_aliases  .zshenv  .zshrc  Acid.terminal  Atom.terminal  CODEOWNERS  IR Black D.terminal  LICENSE  Nosferatu.terminal  Propro.terminal  Proto.terminal  Prrr.terminal  README.md  RectangleConfig.json  Solarized Dark xterm-256color.terminal  bootstrap.sh  codecov.yml  docker-cleanup.sh  docker-wrath.sh  log.sh  macos.sh  my-zsh.zsh-theme  notes.md  osx.sh  prefs.toml  rust-toolchain.toml  (+3 more)
tempura/: Cargo.toml  README.md
tempura/.cargo/: config.toml
tempura/src/catl/: Cargo.toml
tempura/src/catl/src/: main.rs
tempura/src/cmds/: install_dev_tools.rs
tempura/src/cmds/install_dev_tools/: composer_install.rs  tools.rs
tempura/src/ebi/: Cargo.toml
tempura/src/ebi/src/: cmds.rs  main.rs
tempura/src/gcu/: Cargo.toml
tempura/src/gcu/src/: main.rs
tempura/src/idt/: Cargo.toml
tempura/src/idt/src/: installers.rs  main.rs  tools.rs
tempura/src/ika/: Cargo.toml
tempura/src/ika/src/: lib.rs
tempura/src/oe/: Cargo.toml
tempura/src/oe/src/: main.rs
tempura/src/utils/: Cargo.toml  github.rs  wezterm.rs
tempura/src/utils/src/: editor.rs  github.rs  hx.rs  lib.rs  system.rs  wezterm.rs
tempura/src/vpg/src/: main.rs
tempura/src/yghfl/: Cargo.toml
tempura/src/yghfl/fixtures/: ansi_escaped_no_selection.txt  ansi_escaped_single_line_selection.txt
tempura/src/yghfl/src/: main.rs
tempura/src/yhfp/: Cargo.toml
tempura/src/yhfp/src/: main.rs
yog/: .rustfmt.toml  AGENTS.md  Cargo.toml  README.md  clippy.toml  install.sh  rust-toolchain.toml
yog/.cargo/: config.toml
yog/.config/: nextest.toml
yog/src/catl/: Cargo.toml
yog/src/catl/src/: main.rs
yog/src/evoke/: Cargo.toml
yog/src/evoke/src/: main.rs
yog/src/fkr/: Cargo.toml
yog/src/fkr/src/: lib.rs  main.rs
yog/src/gch/: Cargo.toml
yog/src/gch/src/: git.rs  git_status.rs  main.rs
yog/src/gcu/: Cargo.toml
yog/src/gcu/src/: git.rs  git_for_each_ref.rs  main.rs
yog/src/idt/: Cargo.toml
yog/src/idt/src/: downloaders.rs  installers.rs  main.rs  tools.rs
yog/src/miskatonic/: Cargo.toml
yog/src/miskatonic/src/: main.rs
yog/src/nvrim/: Cargo.toml
yog/src/nvrim/src/: buffer.rs  cli.rs  cmds.rs  colorscheme.rs  diagnostics.rs  keymaps.rs  lib.rs  oxi_ext.rs  statuscolumn.rs  statusline.rs  style_opts.rs  test_runner.rs  truster.rs  vim_opts.rs  vopts.rs
yog/src/oe/: Cargo.toml
yog/src/oe/src/: main.rs
yog/src/playground/: Cargo.toml
yog/src/playground/src/: main.rs
yog/src/rua/: Cargo.toml
yog/src/rua/src/: buffer_text.rs  cli.rs  cli_flags.rs  cmds.rs  colorscheme.rs  diagnostics.rs  fake_value_generator.rs  fd.rs  fd_cli_flags.rs  filtering.rs  fkr.rs  fkr_gen.rs  fkr_generator.rs  formatting.rs  globs.rs  keymaps.rs  lib.rs  opts.rs  oxi_ext.rs  oxi_utils.rs  rg.rs  rg_cli_flags.rs  statuscolumn.rs  statusline.rs  style.rs  test_runner.rs  utils.rs  visual_selection.rs  vopts.rs
yog/src/rua2/: Cargo.toml
yog/src/rua2/src/: diagnostics.rs  fkr.rs  lib.rs  statuscolumn.rs  statusline.rs  test_runner.rs
yog/src/spawn/: Cargo.toml
yog/src/spawn/src/: main.rs
yog/src/try/: Cargo.toml
yog/src/try/src/: main.rs
yog/src/utils/: Cargo.toml
yog/src/utils/src/: cmd.rs  editor.rs  git.rs  github.rs  hx.rs  inquire.rs  lib.rs  sk.rs  system.rs  tui.rs  wezterm.rs
yog/src/vpg/: Cargo.toml
yog/src/vpg/src/: main.rs  nvim_dbee.rs  pgpass.rs  vault.rs
yog/src/yghfl/: Cargo.toml
yog/src/yghfl/fixtures/: ansi_escaped_no_selection.txt  ansi_escaped_selection_expands_down.txt
yog/src/yghfl/src/: main.rs
yog/src/yhfp/: Cargo.toml
yog/src/yhfp/src/: main.rs
yog/yog-utilo/cmd/: Cargo.toml
yog/yog-utilo/editor/: Cargo.toml
yog/yog-utilo/git/: Cargo.toml
yog/yog-utilo/github/: Cargo.toml
yog/yog-utilo/hx/: Cargo.toml
yog/yog-utilo/inquair/: Cargo.toml
yog/yog-utilo/inquair/src/: lib.rs
yog/yog-utilo/system/: Cargo.toml
yog/yog-utilo/system/src/: lib.rs
yog/yog-utilo/wezterm/: Cargo.toml
yog/yog-utylo/cmd/: Cargo.toml
yog/yog-utylo/cmd/src/: lib.rs
yog/yog-utylo/editor/: Cargo.toml
yog/yog-utylo/editor/src/: lib.rs
yog/yog-utylo/git/: Cargo.toml
yog/yog-utylo/git/src/: lib.rs
yog/yog-utylo/github/: Cargo.toml
yog/yog-utylo/github/src/: lib.rs
yog/yog-utylo/hx/: Cargo.toml
yog/yog-utylo/inquire/: Cargo.toml
yog/yog-utylo/system/: Cargo.toml
yog/yog-utylo/system/src/: lib.rs
yog/yog-utylo/tui/: Cargo.toml
yog/yog-utylo/tui/src/: lib.rs
yog/yog-utylo/wezterm/: Cargo.toml
yog/yog-utylo/wezterm/src/: lib.rs
yog/yog/agg/: Cargo.toml  help.txt
yog/yog/agg/core/: Cargo.toml
yog/yog/agg/plugin/: Cargo.toml
yog/yog/agg/src/: cmd.rs  main.rs
yog/yog/agm/: Cargo.toml  help.txt
yog/yog/agm/core/: Cargo.toml
yog/yog/agm/plugin/: Cargo.toml
yog/yog/agm/src/: cmd.rs  main.rs
yog/yog/ags/: Cargo.toml  help.txt
yog/yog/ags/src/: main.rs  sessions.rs
yog/yog/catl/: Cargo.toml  help.txt
yog/yog/catl/src/: main.rs
yog/yog/evoke/: Cargo.toml  help.txt
yog/yog/evoke/src/: cargo_metadata.rs  ci.rs  local.rs  main.rs
yog/yog/fkr/: Cargo.toml  help.txt
yog/yog/fkr/src/: lib.rs  (+1 more)
yog/yog/gbm/: Cargo.toml  help.txt
yog/yog/gch/: Cargo.toml  help.txt
yog/yog/gcm/: Cargo.toml  help.txt
yog/yog/gcu/: Cargo.toml  help.txt
yog/yog/ghl/: Cargo.toml  help.txt
yog/yog/hr/: Cargo.toml
yog/yog/idt/: Cargo.toml  help.txt
yog/yog/miskatonic/: Cargo.toml
yog/yog/nomicon/: Cargo.toml  build.rs  help.txt
yog/yog/nvrim/: Cargo.toml  test_parse.rs
yog/yog/oe/: Cargo.toml  help.txt
yog/yog/rmr/: Cargo.toml  help.txt
yog/yog/strgci/: Cargo.toml  help.txt
yog/yog/tec/: Cargo.toml  help.txt
yog/yog/try/: Cargo.toml  help.txt
yog/yog/vpg/: Cargo.toml  help.txt
yog/yog/yghfl/: Cargo.toml  help.txt
yog/yog/yhfp/: Cargo.toml  help.txt
yog/yog/zcp/: Cargo.toml  help.txt
yog/yog/zj/: Cargo.toml  help.txt
(+1033 files in other folders)
