[package]
name = "tempura"
version = "0.1.0"
authors = ["Gian Lu"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
fake = { version = "2.9", features = ["derive"] }
temp-env = { version = "0.3" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
