[workspace]
resolver = "2"
members = [
    "yog/catl",
    "yog/evoke",
    "yog/fkr",
    "yog/gch",
    "yog/gcu",
    "yog/ghl",
    "yog/idt",
    "yog/miskatonic",
    "yog/nomicon",
    "yog/nvrim",
    "yog/oe",
    "yog/rmr",
    "yog/tec",
    "yog/try",
    "yog/vpg",
    "yog/yghfl",
    "yog/yhfp",
    # Utility libraries (ytil)
    "yog/ytil/cmd",
    "yog/ytil/editor",
    "yog/ytil/gh",
    "yog/ytil/git",
    "yog/ytil/hx",
    "yog/ytil/noxi",
    "yog/ytil/sys",
    "yog/ytil/tui",
    "yog/ytil/wezterm",
]

[workspace.package]
version = "0.1.0"
authors = ["Gian Lu"]
edition = "2024"
license = "MIT"
repository = "https://github.com/fusillicode/dotfiles"
readme = "README.md"
keywords = ["cli", "tools", "development", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]

# Centralized shared dependencies (including those used only as dev-deps in member crates).
# Member crates reference them with `{ workspace = true }` under their own [dev-dependencies].
assert2 = { version = "0.3" }
bitflags = { version = "2.9" }
chrono = { version = "0.4", features = ["serde"] }
color-eyre = { version = "0.6" }
convert_case = { version = "0.10" }
fake = { version = "4.4", features = ["derive"] }
getrandom = { version = "0.3" }
git2 = { version = "0.20" }
itertools = { version = "0.14" }
nomicon = { path = "./yog/nomicon" }
pretty_assertions = { version = "1.4" }
reqwest = { version = "0.13", features = ["blocking"] }
rstest = { version = "0.26" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
strum = { version = "0.27", features = ["derive"] }
tempfile = { version = "3.24" }
thiserror = { version = "2.0" }
url = { version = "2.5", features = ["serde"] }

ytil_cmd = { path = "./yog/ytil/cmd" }
ytil_editor = { path = "./yog/ytil/editor" }
ytil_gh = { path = "./yog/ytil/gh" }
ytil_git = { path = "./yog/ytil/git" }
ytil_hx = { path = "./yog/ytil/hx" }
ytil_noxi = { path = "./yog/ytil/noxi" }
ytil_sys = { path = "./yog/ytil/sys" }
ytil_tui = { path = "./yog/ytil/tui" }
ytil_wezterm = { path = "./yog/ytil/wezterm" }

[profile.test]
# Enable debug symbols for coverage (required by llvm-cov / tarpaulin)
debug = true

[profile.release]
# Reduces the size of the target directory
strip = true
lto = true
codegen-units = 1
# This is required to avoid "nvrim" exposed functions to explode Lua
panic = "unwind"
