[workspace]
resolver = "2"
members = [
    "yog/catl",
    "yog/evoke",
    "yog/fkr",
    "yog/gch",
    "yog/gcu",
    "yog/ghl",
    "yog/idt",
    "yog/miskatonic",
    "yog/nomicon",
    "yog/nvrim",
    "yog/oe",
    "yog/rmr",
    "yog/strgci",
    "yog/tec",
    "yog/try",
    "yog/vpg",
    "yog/yghfl",
    "yog/yhfp",
    # Utility libraries (ytil)
    "yog/ytil/cmd",
    "yog/ytil/editor",
    "yog/ytil/gh",
    "yog/ytil/git",
    "yog/ytil/hx",
    "yog/ytil/macros",
    "yog/ytil/noxi",
    "yog/ytil/sys",
    "yog/ytil/tui",
    "yog/ytil/wezterm",
]

[workspace.package]
version = "0.1.0"
authors = ["Gian Lu"]
edition = "2024"
license = "MIT"
repository = "https://github.com/fusillicode/dotfiles"
readme = "README.md"
keywords = ["cli", "tools", "development", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]

# Centralized shared dependencies (including those used only as dev-deps in member crates).
# Member crates reference them with `{ workspace = true }` under their own [dev-dependencies].
assert2 = { version = "0.4" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
convert_case = { version = "0.11" }
fake = { version = "4.4", features = ["derive"] }
nomicon = { path = "./yog/nomicon" }
owo-colors = { version = "4" }
pretty_assertions = { version = "1.4" }
rootcause = { version = "0.12" }
rstest = { version = "0.26" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
strum = { version = "0.27", features = ["derive"] }
tempfile = { version = "3.25" }
thiserror = { version = "2.0" }
ureq = { version = "3.2", default-features = false, features = ["rustls"] }
url = { version = "2.5" }

ytil_cmd = { path = "./yog/ytil/cmd" }
ytil_editor = { path = "./yog/ytil/editor" }
ytil_gh = { path = "./yog/ytil/gh" }
ytil_git = { path = "./yog/ytil/git" }
ytil_hx = { path = "./yog/ytil/hx" }
ytil_macros = { path = "./yog/ytil/macros" }
ytil_sys = { path = "./yog/ytil/sys" }
ytil_tui = { path = "./yog/ytil/tui" }
ytil_wezterm = { path = "./yog/ytil/wezterm" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
dbg_macro = "deny"
unimplemented = "deny"
todo = "deny"
unreachable = "deny"
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
arithmetic_side_effects = "deny"
float_arithmetic = "deny"
implicit_clone = "deny"
redundant_else = "deny"
single_match = "deny"
wildcard_enum_match_arm = "deny"
rc_buffer = "deny"
vec_init_then_push = "deny"
format_push_string = "deny"
verbose_file_reads = "deny"
if_then_some_else_none = "deny"
unseparated_literal_suffix = "deny"
must_use_candidate = "allow"
multiple_crate_versions = "allow"

[workspace.lints.rust]
warnings = "deny"

[profile.dev]
incremental = true

[profile.test]
# Enable debug symbols for coverage (required by llvm-cov / tarpaulin)
debug = true

[profile.release]
# Reduces the size of the target directory
strip = true
lto = true
codegen-units = 1
# This is required to avoid "nvrim" exposed functions to explode Lua
panic = "unwind"
