[package]
name = "utils"
version = "0.1.0"
authors = ["Gian Lu"]
edition = "2021"

[features]
fake = ["dep:fake"]

[dependencies]
anyhow = { workspace = true }
fake = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert2 = { version = "0.3" }
