[package]
name = "evoke"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Build automation and deployment tool that formats, lints, builds, and deploys all yog binaries"
keywords = ["cli", "build", "automation", "deployment", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
color-eyre = { workspace = true }
utils = { workspace = true }
