[package]
name = "fkr"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Interactive fake data generator for testing and development"
keywords = ["cli", "fake", "data", "generator", "testing", "development"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
color-eyre = { workspace = true }
fake = { workspace = true, features = ["uuid"] }
strum = { workspace = true }
utils = { workspace = true }
