[package]
name = "gcu"
version = "0.1.0"
authors = ["Gian Lu"]
edition = "2024"

[dependencies]
chrono = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
utils = { workspace = true }

[dev-dependencies]
assert2 = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
