[package]
name = "idt"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Development tools installer that manages language servers and development utilities"
keywords = ["cli", "installer", "development", "tools", "language-server"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
color-eyre = { workspace = true }
utils = { workspace = true }
