[package]
name = "miskatonic"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Experimental playground for testing code and ideas"
keywords = ["cli", "experimental", "playground", "testing"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
utils = { workspace = true }
