[package]
name = "nvrim"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Nvim Lua module with Rust utilities"
keywords = ["neovim", "nvim", "lua", "plugin", "rust", "editor"]
categories = ["development-tools", "api-bindings"]

[lib]
crate-type = ["cdylib"]

[dependencies]
color-eyre = { workspace = true }
fkr = { path = "../fkr" }
itertools = { workspace = true }
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi", rev = "b1278b123dbac3908f2686ebed6fdadbfef15be1", features = [
  "neovim-nightly",
] }
serde = { version = "1.0" }
serde_repr = { version = "0.1" }
strum = { workspace = true }
tree-sitter = { version = "0.25" }
tree-sitter-rust = { version = "0.24" }
utils = { workspace = true }
