[package]
name = "oe"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Editor file opener for Wezterm integration"
keywords = ["cli", "editor", "wezterm", "neovim", "helix"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
color-eyre = { workspace = true }
utils = { workspace = true }
