[package]
name = "rua"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Neovim Lua module providing Rust utilities for enhanced editor functionality"
keywords = ["neovim", "lua", "plugin", "rust", "editor"]
categories = ["development-tools", "api-bindings"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Couldn't be able to use color-eyre...falling back to anyhow
anyhow = { version = "1.0", features = ["backtrace"] }
chrono = { workspace = true }
fkr = { path = "../fkr" }
mlua = { version = "0.11", features = ["anyhow", "macros", "module", "luajit"] }
serde_json = { workspace = true }
strum = { workspace = true }
tree-sitter = { version = "0.25" }
tree-sitter-rust = { version = "0.24" }
utils = { workspace = true }
