[package]
name = "rua2"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Neovim Lua module providing Rust utilities for enhanced editor functionality"
keywords = ["neovim", "lua", "plugin", "rust", "editor"]
categories = ["development-tools", "api-bindings"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Couldn't be able to use color-eyre...falling back to anyhow
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi", rev = "b1278b123dbac3908f2686ebed6fdadbfef15be1", features = [
  "neovim-nightly",
] }
anyhow = { version = "1.0", features = ["backtrace"] }
chrono = { workspace = true }
fkr = { path = "../fkr" }
serde = { version = "1.0" }
serde_json = { workspace = true }
serde_repr = { version = "0.1" }
strum = { workspace = true }
tree-sitter = { version = "0.25" }
tree-sitter-rust = { version = "0.24" }
utils = { workspace = true }
