[package]
name = "utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Shared utility library for yog tools"
keywords = ["library", "utilities", "common", "shared", "tools"]
categories = ["development-tools", "rust-patterns"]

[features]
fake = ["dep:fake"]

[dependencies]
color-eyre = { workspace = true }
fake = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
skim = { version = "0.20" }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert2 = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { version = "3" }
