[package]
name = "utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Shared utility library for yog tools"
keywords = ["library", "utilities", "common", "shared", "tools"]
categories = ["development-tools", "rust-patterns"]

[features]
fake = ["dep:fake"]

[dependencies]
chrono = { workspace = true }
color-eyre = { workspace = true }
fake = { workspace = true, optional = true }
inquire = { version = "0.7", features = ["fuzzy-matcher"] }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert2 = { workspace = true }
