[package]
name = "vpg"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "PostgreSQL credential manager with Vault integration"
keywords = ["cli", "postgresql", "vault", "credentials", "database"]
categories = ["command-line-utilities", "database", "authentication"]

[dependencies]
color-eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utils = { workspace = true }
