[package]
name = "yghfl"
version = "0.1.0"
authors = ["Gian Lu"]
edition = "2021"

[dependencies]
color-eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
utils = { workspace = true }

[dev-dependencies]
fake = { workspace = true }
temp-env = { version = "0.3" }
utils = { path = "../utils", features = ["fake"] }
