[package]
name = "yghfl"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Generates GitHub links for files currently open in Helix editor with cursor position"
keywords = ["cli", "github", "helix", "editor", "links"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
color-eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
utils = { workspace = true }

[dev-dependencies]
fake = { workspace = true }
temp-env = { version = "0.3" }
utils = { path = "../utils", features = ["fake"] }
