[package]
name = "wezterm"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Gian Lu"]

[features]
fake = ["dep:fake"]

[dependencies]
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fake = { version = "4.4", features = ["derive"], optional = true }

[dev-dependencies]
fake = { version = "4.4", features = ["derive"] }
