[package]
name = "wezterm"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Gian Lu"]

[features]
fake = ["dep:fake"]

[dependencies]
color-eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
fake = { workspace = true, optional = true }

[dev-dependencies]
fake = { workspace = true }
