[package]
name = "github"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Utilities for interacting with GitHub: refs, URLs, and repo metadata"
keywords = ["github", "api", "repository", "refs", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
cmd = { path = "../cmd" }
color-eyre = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert2 = { workspace = true }
