[package]
name = "hx"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Data types and helpers for interacting with the Helix editor state"
keywords = ["helix", "editor", "cursor", "ui", "integration"]
categories = ["development-tools", "command-line-utilities"]

[features]
fake = ["dep:fake"]

[dependencies]
color-eyre = { workspace = true }
fake = { workspace = true, optional = true }

[dev-dependencies]
fake = { workspace = true }
