[package]
name = "system"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "System environment helpers: time, paths, I/O, and platform info"
keywords = ["system", "time", "io", "environment", "platform"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = { workspace = true }
cmd = { workspace = true }
color-eyre = { workspace = true }
