[package]
name = "tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Basic terminal UI building blocks and prompt helpers"
keywords = ["tui", "terminal", "ui", "prompt", "widgets"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
color-eyre = { workspace = true }
inquire = { version = "0.7", features = ["fuzzy-matcher"] }
strum = { workspace = true }
