[package]
name = "ags"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Interactive AI agent session management."
keywords = ["agents", "sessions", "cli", "terminal", "tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = { workspace = true }
owo-colors = { workspace = true }
rootcause = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
ytil_agents = { workspace = true }
ytil_git = { workspace = true }
ytil_sys = { workspace = true }
ytil_tui = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
test-that = { workspace = true }

[lints]
workspace = true
